Add pagination to report and forecast history views